# smartcar

./: .gitignore  accTrain.py  calibration_table_copy.txt  calibration_table_tesla.txt  compiler.sh  long0321.txt  longlingshan0321.dig  miniEV_start.sh  realgps2dig_xy.py  start_sim.sh
ACC/: ACC_80_30s_60_70_90_per15s.csv  ACC_cutin_70_15s_60_5s_70_15s_90_15s.csv
Calc/: Po_quareSignal_data_sim_tesla.txt  Po_sinSignal_data_sim_tesla.txt  Po_slopSignal_data_sim_tesla.txt  SinSignal_data_sim_tesla.txt  SlopSignal_data_sim_tesla.txt  SquareSignal_data_sim_tesla.txt  Vel_slopSignal_data_sim_tesla.txt  Vel_squarSignal_data_sim_tesla.txt  Vel_squareSignal_data_sim_tesla.txt  accTrain.py  calibration_table.txt  calibration_table_miniEV copy.txt  data_process.py  loss_history.txt  model.h5  model_miniEV.h5  model_tesla.h5  plottt.py  rect1.5.txt  sin1.5.txt  slope1.5.txt
LKA/: LKA100.csv  LKA80.csv  (+2 more)
src/messages/smartcar_msgs/: CMakeLists.txt  package.xml
src/messages/smartcar_msgs/msg/: ACCTarget.msg  ControlCommand.msg  DetectedObject.msg  DetectedObjectArray.msg  Grid.msg  Location.msg  My_Trajectory.msg  My_TrajectoryArray.msg  My_Trajectory_Point.msg  ObstacleAttr.msg  RemoteCmd.msg  VehicleChassis.msg  VehicleCmd.msg  VehicleLightCommand.msg  VehicleLightState.msg
src/planning/: CMakeLists.txt  README.md
src/planning/config/: configs.yaml
src/planning/files/: move_x  move_x_1  move_y  move_y_1  pedestrian_one_x  pedestrian_one_y  test_left_x  test_left_y  test_right_x  test_right_y  test_straight_x  test_straight_y  vehicle_left_x  vehicle_left_y  vehicle_right_x  vehicle_right_y  vehicle_straight_x  vehicle_straight_y
src/planning/files/sim_1/: move_x  move_y
src/planning/files/sim_2/: move_x  move_y
src/planning/files/sim_3/: move_x  move_y
src/planning/files/sim_one/: left_x  left_y  right_x  right_y  straight_x  straight_y
src/planning/files/sim_two/: left_x  left_y  right_x  right_y  straight_x  straight_y
src/planning/include/Frenet/: FrenetOptimalTrajectory.h
src/planning/include/Lattice_planner/: collision_checker.h  constraint_checker.h  end_condition_sampler.h  feasible_region.h  lattice_planner.h  path_time_graph.h  piecewise_acceleration_trajectory1d.h  trajectory1d_generator.h  trajectory_evaluator.h
src/planning/include/Obstacle/: Obstacle.h  Obstacle_avoid.h  Obstacle_test.h  boundarys.h
src/planning/include/Polynomial/: QuarticPolynomial.h  QuinticPolynomial.h  polynomial_xd.h
src/planning/include/QP/: constant_jerk_trajectory1d.h  fem_1d_expanded_jerk_qp_problem.h  fem_1d_qp_problem.h  lateral_osqp_optimizer.h  lateral_qp_optimizer.h  osqp_spline_1d_solver.h  piecewise_jerk_path_problem.h  piecewise_jerk_problem.h  piecewise_jerk_speed_problem.h  piecewise_linear_constraint.h  piecewise_linear_generator.h  piecewise_linear_kernel.h  qp_solver.h
src/planning/include/ReferenceLine/: reference_line.h  reference_line_info.h  reference_point.h
src/planning/include/Spline/: Adjacent.h  CubicSpline1D.h  active_set_qp_solver.h  active_set_spline_1d_solver.h  affine_constraint.h  spline_1d.h  spline_1d_constraint.h  spline_1d_kernel.h  spline_1d_seg.h  spline_1d_solver.h  spline_seg_kernel.h
src/planning/include/common/: Configs.h  XmlDomDocument.h  auxiliary_function.h  planning_conf.h  plot_data.h  speed_data.h  speed_limit_decider.h
src/planning/include/dynamic_routing/: dynamic_routing.h  planning_record.h
src/planning/include/path/: path_boundary.h  path_data.h  path_matcher.h  path_struct.h  trajectoryPoint.h
src/planning/launch/: planning.launch  planning_record.launch
src/planning/src/: dynamic_node.cpp  dynamic_routing.cpp  planning_record.cpp  planning_record_node.cpp  route_0_cosim.txt
src/planning/src/Frenet/: FrenetOptimalTrajectory.cpp
src/planning/src/Lattice_planner/: collision_checker.cpp  constraint_checker.cpp  end_condition_sampler.cpp  feasible_region.cpp  lattice_planner.cpp  lattice_trajectory1d.cpp  path_time_graph.cpp  prediction_querier.cpp  trajectory1d_generator.cpp  trajectory_combiner.cpp  trajectory_evaluator.cpp
src/planning/src/Obstacle/: Obstacle.cpp  Obstacle_avoid.cpp  Obstacle_test.cpp
src/planning/src/Polynomial/: QuarticPolynomial.cpp  QuinticPolynomial.cpp  polynomial_xd.cpp  quartic_polynomial_curve1d.cpp  quintic_polynomial_curve1d.cpp
src/planning/src/QP/: fem_1d_expanded_jerk_qp_problem.cpp  fem_1d_qp_problem.cpp  lateral_osqp_optimizer.cpp  osqp_spline_1d_solver.cpp  piecewise_jerk_path_problem.cpp  piecewise_jerk_problem.cpp  piecewise_jerk_speed_problem.cpp  piecewise_linear_constraint.cpp  piecewise_linear_generator.cpp  piecewise_linear_kernel.cpp  qp_solver.cpp
src/planning/src/ReferenceLine/: reference_line.cpp  reference_line_info.cpp  reference_point.cpp
src/planning/src/Spline/: Adjacent.cpp  CubicSpline1D.cpp  active_set_qp_solver.cpp  active_set_spline_1d_solver.cpp  affine_constraint.cpp  spline_1d.cpp  spline_1d_constraint.cpp  spline_1d_kernel.cpp  spline_1d_seg.cpp  spline_seg_kernel.cpp
src/planning/src/common/: Config.cpp  PlanningTarget.cpp  XmlDomDocument.cpp  auxiliary_function.cpp  planning_conf.cpp  plot_data.cpp  speed_data.cpp  speed_limit.cpp  speed_limit_decider.cpp
src/planning/src/path/: path_boundary.cpp  path_data.cpp  path_matcher.cpp  trajectoryPoint.cpp
src/prediction/motion_predictor/naive_motion_predict/: CMakeLists.txt  package.xml
src/prediction/motion_predictor/naive_motion_predict/include/naive_motion_predict/: MapHandle.cc  MapHandle.h  common.cc  common.h  naive_motion_predict.h  path_read.cc  path_read.h
src/prediction/motion_predictor/naive_motion_predict/launch/: naive_motion_predict.launch
src/prediction/motion_predictor/naive_motion_predict/scripts/: car_0.csv  car_1.csv  car_100.csv  collect_object_path.py
src/prediction/motion_predictor/naive_motion_predict/scripts/collect/: car_1.csv
src/prediction/motion_predictor/naive_motion_predict/src/: naive_motion_predict.cpp  naive_motion_predict_node.cpp  naive_motion_predict_path_based.cpp
src/tf_node/: CMakeLists.txt
src/tf_node/src/: tf_broadcaster.cpp
(+862 files in other folders)
